--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 This is wc3connect, an applet for connection to Warcraft III host bots with reconnection protection. See INSTALL for installation instructions.
 
 wc3connect is licensed under the GNU GPL v3. See LICENSE for details.
+
+Credits:
+- Mofsy (w3game.ru/connect/) Writing configuration files, debugging, and initial testing.
